--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "mimikit"]
 	path = mimikit
 	url = https://github.com/ktonal/mimikit.git
+	branch = net-feature-compat
 [submodule "h5mapper"]
 	path = h5mapper
 	url = https://github.com/ktonal/h5mapper.git
+	branch = main
 [submodule "pypbind"]
 	path = pypbind
 	url = https://github.com/ktonal/pypbind.git
